Restructure project into core, render, objects, assets, utils folders

--- a/Avoider-Game-HTML5-master/index.html
+++ b/Avoider-Game-HTML5-master/index.html
@@ -15,16 +15,16 @@
 		<br></br>
 			
         <canvas id="canvas"></canvas>
-        <script type="text/javascript" src="js/render-text.js"></script>
-        <script type="text/javascript" src="js/render-game.js"></script>
-        <script type="text/javascript" src="js/update-game.js"></script>
-        <script type="text/javascript" src="js/render-functions.js"></script>
-        <script type="text/javascript" src="js/logic-functions.js"></script>
-        <script type="text/javascript" src="js/tools.js"></script>
-		<script type="text/javascript" src="js/controller.js"></script>
-        <script type="text/javascript" src="js/game.js"></script>
-		<script type="text/javascript" src="js/game-objects.js"></script>
-        <script type="text/javascript" src="js/main.js"></script>
+        <script type="text/javascript" src="render/textRenderer.js"></script>
+        <script type="text/javascript" src="render/renderer.js"></script>
+        <script type="text/javascript" src="core/gameLogic.js"></script>
+        <script type="text/javascript" src="render/spriteRenderer.js"></script>
+        <script type="text/javascript" src="core/inputLogic.js"></script>
+        <script type="text/javascript" src="utils/helpers.js"></script>
+		<script type="text/javascript" src="core/controller.js"></script>
+        <script type="text/javascript" src="game.js"></script>
+		<script type="text/javascript" src="objects/gameObjects.js"></script>
+        <script type="text/javascript" src="main.js"></script>
 		<br></br>
 		
 		<div id = "message">
