--- a/Avoider-Game-HTML5-master/index.html
+++ b/Avoider-Game-HTML5-master/index.html
@@ -15,10 +15,11 @@
 		<br></br>
 			
         <canvas id="canvas"></canvas>
-        <script type="text/javascript" src="render/textRenderer.js"></script>
-        <script type="text/javascript" src="render/renderer.js"></script>
+        <script type="text/javascript" src="core/layer.js"></script>
+        <script type="text/javascript" src="render/textRenderLayer.js"></script>
+        <script type="text/javascript" src="render/gameObjectsRender.js"></script>
         <script type="text/javascript" src="core/gameLogic.js"></script>
-        <script type="text/javascript" src="render/spriteRenderer.js"></script>
+        <script type="text/javascript" src="render/gameObjectRenderFunctions.js"></script>
         <script type="text/javascript" src="core/inputLogic.js"></script>
         <script type="text/javascript" src="utils/helpers.js"></script>
 		<script type="text/javascript" src="core/controller.js"></script>
