small changes to index.html and updated README

--- a/Avoider-Game-HTML5-master/index.html
+++ b/Avoider-Game-HTML5-master/index.html
@@ -1,3 +1,5 @@
+
+<!DOCTYPE html>
 <html>
     <head>
         <title>Avoider</title>
@@ -9,7 +11,7 @@
 		<br></br>
 		<nav id = "top_menu">
 				<ul>
-				<li><a href ="http://www.garysgray.com/">Home</a></li>
+				<li><a href ="https://github.com/garysgray/avoider-revamp/">Home</a></li>
 				<ul>
 		</nav>
 		<br></br>
