--- a/Avoider-Game-HTML5-master/index.html
+++ b/Avoider-Game-HTML5-master/index.html
@@ -17,17 +17,17 @@
 		<br></br>
 			
         <canvas id="canvas"></canvas>
-        <script type="text/javascript" src="core/layer.js"></script>
-        <script type="text/javascript" src="render/textRenderLayer.js"></script>
-        <script type="text/javascript" src="render/gameObjectsRenderLayer.js"></script>
-        <script type="text/javascript" src="core/gameLogic.js"></script>
-        <script type="text/javascript" src="render/gameObjectRenderFunctions.js"></script>
-        <script type="text/javascript" src="core/inputLogic.js"></script>
-        <script type="text/javascript" src="utils/helpers.js"></script>
-		<script type="text/javascript" src="core/controller.js"></script>
-        <script type="text/javascript" src="game.js"></script>
-		<script type="text/javascript" src="objects/gameObjects.js"></script>
-        <script type="text/javascript" src="main.js"></script>
+        <script type="text/javascript" src="JS/core/layer.js"></script>
+        <script type="text/javascript" src="JS/render/textRenderLayer.js"></script>
+        <script type="text/javascript" src="JS/render/gameObjectsRenderLayer.js"></script>
+        <script type="text/javascript" src="JS/core/gameLogic.js"></script>
+        <script type="text/javascript" src="JS/render/gameObjectRenderFunctions.js"></script>
+        <script type="text/javascript" src="JS/core/inputLogic.js"></script>
+        <script type="text/javascript" src="JS/utils/helpers.js"></script>
+		<script type="text/javascript" src="JS/core/controller.js"></script>
+        <script type="text/javascript" src="JS/core/game.js"></script>
+		<script type="text/javascript" src="JS/objects/gameObjects.js"></script>
+        <script type="text/javascript" src="JS/main.js"></script>
 		<br></br>
 		
 		<div id = "message">
