--- a/Avoider-Game-HTML5-master/index.html
+++ b/Avoider-Game-HTML5-master/index.html
@@ -17,12 +17,12 @@
 		<br></br>
 			
         <canvas id="canvas"></canvas>
-        <script type="text/javascript" src="JS/core/layer.js"></script>
+        <script type="text/javascript" src="JS/render/layer.js"></script>
         <script type="text/javascript" src="JS/render/textRenderLayer.js"></script>
         <script type="text/javascript" src="JS/render/gameObjectsRenderLayer.js"></script>
-        <script type="text/javascript" src="JS/core/gameLogic.js"></script>
+        <script type="text/javascript" src="JS/logic/gameLogic.js"></script>
         <script type="text/javascript" src="JS/render/gameObjectRenderFunctions.js"></script>
-        <script type="text/javascript" src="JS/core/inputLogic.js"></script>
+        <script type="text/javascript" src="JS/logic/inputLogic.js"></script>
         <script type="text/javascript" src="JS/utils/helpers.js"></script>
 		<script type="text/javascript" src="JS/core/controller.js"></script>
         <script type="text/javascript" src="JS/core/game.js"></script>
