consolidated enums and const to make a lot less private vars and gets and sets for consts

--- a/Avoider-Game-HTML5-master/index.html
+++ b/Avoider-Game-HTML5-master/index.html
@@ -17,17 +17,18 @@
             <br></br>
                 
             <canvas id="canvas"></canvas>
-            <script type="text/javascript" src="JS/render/layer.js"></script>
-            <script type="text/javascript" src="JS/render/textRenderLayer.js"></script>
-            <script type="text/javascript" src="JS/render/gameObjectsRenderLayer.js"></script>
-            <script type="text/javascript" src="JS/render/renderUtilities.js"></script>
-            <script type="text/javascript" src="JS/logic/mainStateLogic.js"></script>
-            <script type="text/javascript" src="JS/logic/npcLogic.js"></script>          
-            <script type="text/javascript" src="JS/utils/gameUtilities.js"></script>
-            <script type="text/javascript" src="JS/core/gameController.js"></script>
-            <script type="text/javascript" src="JS/core/gameConfig.js"></script>
-            <script type="text/javascript" src="JS/objects/gameEntities.js"></script>
-            <script type="text/javascript" src="JS/main.js"></script>
+            <script type="text/javascript" src="js/render/layer.js"></script>
+            <script type="text/javascript" src="js/render/textRenderLayer.js"></script>
+            <script type="text/javascript" src="js/render/gameObjectsRenderLayer.js"></script>
+            <script type="text/javascript" src="js/render/renderUtilities.js"></script>
+            <script type="text/javascript" src="js/logic/mainStateLogic.js"></script>
+            <script type="text/javascript" src="js/logic/npcLogic.js"></script>          
+            <script type="text/javascript" src="js/utils/gameUtilities.js"></script>
+            <script type="text/javascript" src="js/core/gameController.js"></script>
+            <script type="text/javascript" src="js/core/gameConfig.js"></script>
+            <script type="text/javascript" src="js/core/gameDefs.js"></script>
+            <script type="text/javascript" src="js/objects/gameEntities.js"></script>
+            <script type="text/javascript" src="js/main.js"></script>
             <br></br>
             
             <script>
