update the debug set up a little its just commenting out some bools at top of main.js

--- a/Avoider-Game-HTML5-master/index.html
+++ b/Avoider-Game-HTML5-master/index.html
@@ -35,7 +35,7 @@
                 window.onload = function() 
                 {
                     // Call the initialization function from main.js
-                    startInitializationProcess();
+                    startGameLoop();
                 }
             </script>
 
