--- a/Avoider-Game-HTML5-master/test/index.html
+++ b/Avoider-Game-HTML5-master/test/index.html
@@ -7,36 +7,25 @@
 </head>
 <body>
 
+  <!-- Jasmine Stuff -->
   <script src="https://cdn.jsdelivr.net/npm/jasmine-core@5.1.0/lib/jasmine-core/jasmine.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/jasmine-core@5.1.0/lib/jasmine-core/jasmine-html.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/jasmine-core@5.1.0/lib/jasmine-core/boot0.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/jasmine-core@5.1.0/lib/jasmine-core/boot1.js"></script>
 
-  <!-- Minimal GameDefs for test -->
-  <script>
-    window.GameDefs = {
-      spriteTypes: {
-        PLAYER:   { type: "player",    w: 32, h: 32, path: "assets/sprites/ships.png" },
-        ORB:      { type: "orb",       w: 24, h: 24, speed: 200, spawnRatio: 10, path: "assets/sprites/orb.png" },
-        FIRE_AMMO:{ type: "fireAmmo",  w: 16, h: 16, speed: 150, spawnRatio: 200, path: "assets/sprites/fire.png" },
-        BULLET:   { type: "bullet",    w: 8,  h: 8, speed: 550, spawnGap: 0, path: "assets/sprites/bullet.png" }
-    },
-      playStates: {
-        AVOID: 0,
-        SHIELD: 1,
-        SHOOT: 2,
-        SUPER: 3,
-        DEATH: 4
-    },
-
-    };
-  </script>
-
   <!-- Load your Player class -->
-  <script src="../js/objects/gameEntities.js"></script>
+  <script src="../js/objects/gameEntities.js"></script>  
+  <script src="../js/utils/gameUtilities.js"></script>
+  <script src="../js/core/gameController.js"></script>
+  <script src="../js/core/gameConfig.js"></script>
+  <script src="../js/core/gameDefs.js"></script>
 
   <!-- Load the Player spec -->
   <script src="../spec/playerSpec.js"></script>
+  <script src="../spec/gameControllerSpec.js"></script>
+  <script src="../spec/deviceSpec.js"></script>
+
+
 
 </body>
 </html>
