moved player into own file and gave player its own playerState from game obj, and moved other compnents into player

--- a/Avoider-Game-HTML5-master/index.html
+++ b/Avoider-Game-HTML5-master/index.html
@@ -30,8 +30,9 @@
             <script type="text/javascript" src="js/utils/renderUtilities.js"></script>
             <script type="text/javascript" src="js/core/gameController.js"></script>
             <script type="text/javascript" src="js/core/gameConfig.js"></script>
-            <script type="text/javascript" src="js/core/gameDefs.js"></script>
+            <script type="text/javascript" src="js/core/gameDefs.js"></script>         
             <script type="text/javascript" src="js/objects/gameEntities.js"></script>
+            <script type="text/javascript" src="js/objects/player.js"></script>
             <script type="text/javascript" src="js/main.js"></script>
             <br></br>
             
